# fast-rm

./: Cargo.toml  LICENSE  README.md  justfile
scripts/: remote-linux-matrix.sh
src/: job.rs  lib.rs  main.rs  purge.rs  trash.rs
src/trash/: linux.rs  macos.rs
