[package]
name = "fast-rm"
version = "0.1.0"
edition = "2024"
description = "Fast Trash-backed parallel deletion for large directory trees"
repository = "https://github.com/tekacs/fast-rm"
readme = "README.md"
license = "MIT"
keywords = ["rm", "delete", "trash", "unlink", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
libc = "0.2"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["local-offset"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSFileManager",
    "NSURL",
    "NSError",
    "NSString",
] }

[dev-dependencies]
tempfile = "3.10"
